# RustyHeadphones

./: .gitignore  Cargo.toml  README.md  index.html  setup.sh  t.txt
docker/: Dockerfile
src/: backend.rs  gui.rs  helpers.rs  main.rs  operations.rs  search.rs  spotify.rs  terminal.rs
