[package]
name = "rustyheadphones"
version = "2.0.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rodio = "0.19.0"
tokio = {version="1.40.0", features=["full"]}
walkdir = "2.5.0"
rand = "*"
rustyline = "14.0.0"
rust_spotify_web_playback_sdk = { git = "https://github.com/KOEGlike/rust_spotify_web_playback_sdk" }
clap = { version = "4.0", features = ["derive"] }
egui = "0.26.2"
eframe = { version = "0.26.2", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
rfd = "0.11.0" 
egui_extras = {version = "0.26.2", features = ["all_loaders"]}
image = { version = "0.25", features = ["jpeg", "png"] }
crossterm = "0.28.1"
